<resources>
    <string name="app_name">RubyMobile</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="onboard_one_title">Absolute Safety</string>
    <string name="onboard_two_title">Various Services</string>
    <string name="onboard_three_title">Easy Deposit and Withdrawal</string>
    <string name="quick_money">Quick Money Transfer</string>
    <string name="attractive_deal">Attractive Deal</string>
    <string name="login">Log In</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="use_the_phone">Use the phone number to register or login</string>
    <string name="ruby_mobile">Ruby Mobile</string>
    <string name="next_capital">NEXT</string>
    <string name="login_with_phone_number">Login with phone number</string>
    <string name="send_authentication">We will send the authentication code\nto the phone number you entered.\nDo you want to continue?</string>
    <string name="cancel_capital">CANCEL</string>
    <string name="verification_otp">Verification OTP</string>
    <string name="a_verification">A Verification Code has\nBeen Sent to</string>
    <string name="send_agin">Send Again OTP ( 30 )</string>
    <string name="change_phone_number_c">CHANGE PHONE NUMBER</string>
    <string name="welcome">Welcome!</string>
    <string name="Enter_your_password">Enter Your Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="now_quick">Now! Quick Login Use Touch ID/ Face ID</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="finger_print">Fingerprint for Ruby Mobile</string>
    <string name="use_finger_print">Use Fingerprint to unlock Ruby Mobile</string>
    <string name="oh_no">Ohh no! You\'re leaving\nAre You Sure</string>
    <string name="yes_log_me_out">YES, LOG ME OUT</string>
    <string name="naah_just_kidding">NAAH JUST KIDDING</string>
    <string name="sign_up">Sign Up</string>
    <string name="i_have_read">I have read and agree to the Terms of Use\nof Ruby Mobile</string>
    <string name="do_you_want">Do You Want To Login?</string>
    <string name="you_phone_number">Your phone number(256)123-456\nalready has an account on\nthis app.</string>
    <string name="back">BACK</string>
    <string name="login_in">LOG-IN</string>
    <string name="have_you_not_receive">Have You not Received Verification\nCodes OTP</string>
    <string name="ruby_mobile_will_call">Ruby Mobile will call you (256)123-456\nto read the OTP code.</string>
    <string name="close">CLOSE</string>
    <string name="call">CALL</string>
    <string name="create_a_password_with">Create a password with 6 number to\nsafeguard your Ruby Mobile</string>
    <string name="enter">ENTER</string>
    <string name="create_password">Create Password</string>
    <string name="password_not_matched">*Password does not match please\ntry again</string>
    <string name="this_information">This information is used to authenticate and\nprotect your account better</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="reference_code">Reference  Code</string>
    <string name="reference_code_">Reference  Code*</string>
    <string name="done">DONE</string>
    <string name="information">Information</string>
    <string name="please_fill_in">Please fill in exactly the information provided.\nWe will send a mail to the email\naddress to registered to regain\nyour password</string>
    <string name="your_id_number">Your ID Number</string>
    <string name="your_email_id">Your Email ID</string>
    <string name="suggestion">Suggestions:- johndoe@gmail.com</string>
    <string name="sent">SENT</string>
    <string name="instruction">Instructions to retrieve the password</string>
    <string name="please_perfor">Please  perform the following 3 steps to retrieve your\npassword</string>
    <string name="please_fill_instruction">Please fill in exactly the information provided. We will send a mail to the email address to registered to regain your password</string>
    <string name="you_check_email">Your check your email and click on the authentication link\nto receive to OTP password</string>
    <string name="use_the_new">Use the newly issued OTP password log into the application, then go to settings and change your new password.</string>
    <string name="introduction">Introduction</string>
    <string name="password_reset_eamil">Password Reset Email Sent</string>
    <string name="an_email_has">An email has been sent to your resuce email\naddress. Follow directions in the email to\nreset your password.</string>
    <string name="ok">OK</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="scanAnyQr">Scan QR</string>
    <string name="shop">Shop</string>
    <string name="bank">Bank</string>
    <string name="me">Me</string>
    <string name="recharge"><![CDATA[Recharge & Make Payment]]></string>
    <string name="financial_service">Financial Service</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_location">Add Location</string>
    <string name="online_shopping">Online Shopping</string>
    <string name="mobilePhones">Mobile Phones</string>
    <string name="allSmartphones">All Smartphones</string>
    <string name="enter_pincode">Enter Pincode for faster deliver option</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="your_search">Your Search</string>
    <string name="price">Price</string>
    <string name="range">Range</string>
    <string name="color">Color</string>
    <string name="brand">Brand</string>
    <string name="internalMemory">Internal Memory</string>
    <string name="apply">Apply</string>
    <string name="details">Details</string>
    <string name="viewDetails">VIEW DETAILS</string>
    <string name="buyNow">Buy Now</string>
    <string name="productDetails">Product Details</string>
    <string name="cart">Cart</string>
    <string name="cartTotal">Cart Total</string>
    <string name="totalMrp">Total MRP</string>
    <string name="amountPayb">Amount Payble</string>
    <string name="home">Home</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="addNewAdd">Add New Address</string>
    <string name="payment">Payment</string>
    <string name="addPaymentMethod">Add Payment  Method</string>
    <string name="totalDiscount">Total Discount</string>
    <string name="sellingPc">Selling  Price</string>
    <string name="shoppingFees">Shopping Fee</string>
    <string name="ruby_mobile_color"><font fgcolor="#6200EE">Ruby</font><font fgcolor="#46b751"> Mobile</font></string>
    <string name="register_name">Register Name/Mobile No. to Payment</string>
    <string name="paySecurely">Pay Securely</string>
    <string name="youArePaying">You Are Paying To E-Commerce</string>
    <string name="proceed">Proceed</string>
    <string name="faceid">FaceID for Ruby Mobile</string>
    <string name="paymentSuccess">Payment Success</string>
    <string name="successTransaction">Successful Transaction</string>
    <string name="you_have_success">You have successfully paid moneyto\nE-commerce from Ruby\nmobile wallet</string>
    <string name="balaceInthe">Balance in the wallet</string>
    <string name="mainScreen">Main Screen</string>
    <string name="otpForPayment">OTP For Payment</string>
    <string name="areYouSure">Are You Sure You Want To Proceed\nThe Transaction</string>
    <string name="sure">Sure</string>
    <string name="orderDetails">Order Details</string>
    <string name="delivryTo"><font fgcolor="#6200EE">Delivery to</font><font fgcolor="#46b751"> K.K. Jain</font></string>
    <string name="shippingDetails">Shipping Details</string>
    <string name="trackOrder">Track Order</string>
    <string name="myOrder">My Order</string>
    <string name="purchaseOrder">Purchase Order</string>
    <string name="shipTo">Ship To</string>
    <string name="name">Name :</string>
    <string name="address">Address :</string>
    <string name="goToHome">Go To Home</string>
    <string name="orderId">Order ID: xyz2355kk</string>
    <string name="priceDetails">Price Details</string>
    <string name="cartTotalNew"><font fgcolor="#1b55ba">Cart</font><font fgcolor="#000000"> Total</font></string>
    <string name="myWallet">My Wallet</string>
    <string name="balanceInthe">Balance in the wallet</string>
    <string name="eachTransaction">Each Transaction on ruby mobile are plus your points.\nYou can redeem points for gift cards.</string>
    <string name="points">Points</string>
    <string name="expired">Expired</string>
    <string name="cardBank">Card/Bank Accounts</string>
    <string name="id">ID</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="transactionLmt">Transaction Limit</string>
    <string name="personalInformation">Personal Information</string>
    <string name="choosePrfl">Choose Profile</string>
    <string name="chooseGlry">Choose Galery</string>
    <string name="takePhoto">Take Photo</string>
    <string name="myQrCode">My QR Code</string>
    <string name="enterAmount">Enter Amount</string>
    <string name="saveImage">Save Image</string>
    <string name="changeId">Change ID</string>
    <string name="enterYourId">Enter Your ID</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="changeDob">Change Date of Birth</string>
    <string name="enterYrDob">Enter Your Date of Birth</string>
    <string name="enterYrGender">Enter Your Gender</string>
    <string name="changePassword">Change Password</string>
    <string name="enterYourAddress">Enter Your Address</string>
    <string name="addCardBank">Add Card/Bank Accounts</string>
    <string name="account">Account</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="status">Status</string>
    <string name="unlink">Unlink</string>
    <string name="enter_your_reference_code">Enter your Reference Code</string>
    <string name="enter_your_surname">Enter your Surname</string>
    <string name="enter_your_given_name">Enter your Given Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="_91">+91*</string>
    <string name="enter_the_code_recieved_by">Enter the code recieved by</string>
    <string name="enter_6_digits">Enter 6 digits password</string>
    <string name="country">Country*</string>
    <string name="enter_your_country">Enter your Country</string>
    <string name="given_name">Given Name*</string>
    <string name="surname">Surname*</string>
    <string name="password">Password*</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="by_registering_you_agree_to_the_ruby_mobile_service_agreement_and_ruby_mobile_privacy_policy">By Registering you agree to the Ruby Mobile Service Agreement and Ruby Mobile Privacy policy</string>
    <string name="get_code">Get Code</string>
    <string name="verification">Verification*</string>
</resources>