<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout_statusBar"
        android:background="@drawable/status_bar_login"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_centerVertical="true"
            android:background="@drawable/back_status"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_centerInParent="true"
            android:textSize="@dimen/dp_15"
            android:textColor="@color/colorWhite"
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_below="@+id/relativeLayout_statusBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/enter_your_phone_number"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_18"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp_50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/use_the_phone"
            android:textColor="@color/colorGrey"
            android:textSize="@dimen/sp_13"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/ruby_mobile"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_13"
            android:gravity="center"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



        <LinearLayout
            android:layout_marginTop="@dimen/dp_70"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.hbb20.CountryCodePicker
                android:id="@+id/countryCodePicker"
                app:ccp_textSize="@dimen/sp_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </com.hbb20.CountryCodePicker>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_mobileNumber"
                android:maxLines="1"
                android:background="@null"
                android:maxLength="10"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:layout_width="@dimen/dp_135"
                android:layout_height="wrap_content"/>


        </LinearLayout>
        <View
            android:layout_gravity="center"
            android:background="@color/colorGrey"
            android:layout_width="@dimen/dp_230"
            android:layout_height="@dimen/dp_1"/>



        <androidx.appcompat.widget.AppCompatCheckBox
            android:textColor="@color/colorGrey"
            android:textSize="@dimen/sp_10"
            android:layout_marginTop="@dimen/dp_60"
            android:layout_gravity="center"
            android:text="@string/i_have_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            android:textColor="@color/colorWhite"
            android:text="@string/next_capital"
            android:background="@drawable/button_rounded_login"
            android:layout_marginTop="@dimen/dp_60"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="@dimen/dp_190"
            android:layout_height="@dimen/dp_45"/>





    </LinearLayout>

</RelativeLayout>
</ScrollView>