<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/dp_30"
        app:srcCompat="@drawable/ic_left_arrow_white"
        android:background="@drawable/dark_blue_circle"
        android:layout_centerVertical="true"
        android:padding="@dimen/dp_5"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_height="@dimen/dp_30"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:fontFamily="@font/sanfransiso_semibold"
        android:textSize="@dimen/sp_18"
        android:layout_centerHorizontal="true"
        android:text="@string/register"
        android:layout_centerVertical="true"
        android:padding="@dimen/dp_10"
        android:textColor="@color/top_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardPreventCornerOverlap="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@null">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="@dimen/dp_0"
            android:fontFamily="@font/sanfransiso_bold"
            android:layout_weight=".5"
            android:textSize="@dimen/sp_15"
            android:textColor="@color/top_color"
            android:layout_height="wrap_content"
            android:text="@string/country"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="@dimen/dp_0"
            android:fontFamily="@font/sanfransiso_regular"
            android:layout_weight=".6"
            android:textSize="@dimen/sp_13"
            android:singleLine="true"
            android:inputType="text"
            android:background="@null"
            android:hint="@string/enter_your_country"
            android:textColor="@color/top_color"
            android:textColorHint="@color/top_color"
            android:layout_height="wrap_content" />

    </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardPreventCornerOverlap="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@null">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="@dimen/dp_0"
                android:fontFamily="@font/sanfransiso_bold"
                android:layout_weight=".5"
                android:textSize="@dimen/sp_15"
                android:textColor="@color/top_color"
                android:layout_height="wrap_content"
                android:text="@string/_91"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="@dimen/dp_0"
                android:fontFamily="@font/sanfransiso_regular"
                android:layout_weight=".4"
                android:hint="@string/mobile_number"
                android:textSize="@dimen/sp_13"
                android:singleLine="true"
                android:inputType="number"
                android:background="@null"
                android:textColor="@color/top_color"
                android:textColorHint="@color/top_color"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvGetCode"
                android:layout_width="@dimen/dp_0"
                android:layout_weight=".2"
                android:background="@color/top_color"
                android:text="@string/get_code"
                android:fontFamily="@font/sanfransiso_bold"
                android:padding="@dimen/dp_2"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_10"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardPreventCornerOverlap="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@null">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="@dimen/dp_0"
                android:fontFamily="@font/sanfransiso_bold"
                android:layout_weight=".5"
                android:textSize="@dimen/sp_15"
                android:textColor="@color/top_color"
                android:layout_height="wrap_content"
                android:text="@string/verification"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="@dimen/dp_0"
                android:fontFamily="@font/sanfransiso_regular"
                android:layout_weight=".6"
                android:textSize="@dimen/sp_13"
                android:singleLine="true"
                android:inputType="text"
                android:background="@null"
                android:textColor="@color/top_color"
                android:textColorHint="@color/top_color"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_code_recieved_by"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardPreventCornerOverlap="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@null">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="@dimen/dp_0"
                android:fontFamily="@font/sanfransiso_bold"
                android:layout_weight=".5"
                android:textSize="@dimen/sp_15"
                android:textColor="@color/top_color"
                android:layout_height="wrap_content"
                android:text="@string/given_name"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="@dimen/dp_0"
                android:fontFamily="@font/sanfransiso_regular"
                android:layout_weight=".6"
                android:singleLine="true"
                android:inputType="text"
                android:background="@null"
                android:textSize="@dimen/sp_13"
                android:textColor="@color/top_color"
                android:textColorHint="@color/top_color"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_given_name"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardPreventCornerOverlap="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@null">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="@dimen/dp_0"
                android:fontFamily="@font/sanfransiso_bold"
                android:layout_weight=".5"
                android:textSize="@dimen/sp_15"
                android:textColor="@color/top_color"
                android:layout_height="wrap_content"
                android:text="@string/surname"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="@dimen/dp_0"
                android:fontFamily="@font/sanfransiso_regular"
                android:layout_weight=".6"
                android:textSize="@dimen/sp_13"
                android:textColor="@color/top_color"
                android:singleLine="true"
                android:inputType="text"
                android:background="@null"
                android:textColorHint="@color/top_color"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_surname"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardPreventCornerOverlap="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@null">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="@dimen/dp_0"
                android:fontFamily="@font/sanfransiso_bold"
                android:layout_weight=".5"
                android:textSize="@dimen/sp_15"
                android:textColor="@color/top_color"
                android:layout_height="wrap_content"
                android:text="@string/password"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="@dimen/dp_0"
                android:fontFamily="@font/sanfransiso_regular"
                android:layout_weight=".6"
                android:textSize="@dimen/sp_13"
                android:singleLine="true"
                android:inputType="text"
                android:background="@null"
                android:textColor="@color/top_color"
                android:textColorHint="@color/top_color"
                android:layout_height="wrap_content"
                android:hint="@string/enter_6_digits"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardPreventCornerOverlap="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@null">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="@dimen/dp_0"
                android:fontFamily="@font/sanfransiso_bold"
                android:layout_weight=".5"
                android:textSize="@dimen/sp_15"
                android:textColor="@color/top_color"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="@dimen/dp_0"
                android:fontFamily="@font/sanfransiso_regular"
                android:layout_weight=".6"
                android:textSize="@dimen/sp_13"
                android:textColor="@color/top_color"
                android:singleLine="true"
                android:inputType="text"
                android:background="@null"
                android:textColorHint="@color/top_color"
                android:layout_height="wrap_content"
                android:hint="@string/enter_6_digits"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardPreventCornerOverlap="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@null">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="@dimen/dp_0"
                android:fontFamily="@font/sanfransiso_bold"
                android:layout_weight=".5"
                android:textSize="@dimen/sp_15"
                android:textColor="@color/top_color"
                android:layout_height="wrap_content"
                android:text="@string/reference_code_"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="@dimen/dp_0"
                android:fontFamily="@font/sanfransiso_regular"
                android:layout_weight=".6"
                android:textSize="@dimen/sp_13"
                android:singleLine="true"
                android:inputType="text"
                android:background="@null"
                android:hint="@string/enter_your_reference_code"
                android:textColorHint="@color/top_color"
                android:textColor="@color/top_color"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:padding="@dimen/dp_10"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/reg_button"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:text="@string/register"
        android:layout_marginTop="@dimen/dp_30"
        android:fontFamily="@font/sanfransiso_bold"
        android:textSize="@dimen/sp_18"
        android:textAllCaps="true"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:buttonTint="@color/reg_button"
        android:textSize="@dimen/sp_13"
        android:textColor="@color/top_color"
        android:layout_gravity="top"
        android:gravity="top"
        android:layout_margin="@dimen/dp_30"
        android:text="@string/by_registering_you_agree_to_the_ruby_mobile_service_agreement_and_ruby_mobile_privacy_policy"/>

</LinearLayout>